@@ -87,7 +87,7 @@
    "provides" : {
       "Alien::libuv" : {
          "file" : "lib/Alien/libuv.pm",
-         "version" : "1.009"
+         "version" : "1.010"
       }
    },
    "release_status" : "stable",
@@ -102,7 +102,7 @@
          "web" : "https://github.com/genio/Alien-libuv"
       }
    },
-   "version" : "1.009",
+   "version" : "1.010",
    "x_Dist_Zilla" : {
       "perl" : {
          "version" : "5.026001"
@@ -438,7 +438,7 @@
                   "branch" : null,
                   "changelog" : "Changes",
                   "signed" : 0,
-                  "tag" : "v1.009",
+                  "tag" : "v1.010",
                   "tag_format" : "v%V",
                   "tag_message" : "v%V"
                },
